--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ Description: A minimalist theme focused on readability, inspired by the Reader m
 Version: 1.0.0
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
+GitHub Theme URI: https://github.com/tbibby/direach-theme
 Text Domain: direach
 Tags:
 
