--- a/style.css
+++ b/style.css
@@ -267,7 +267,7 @@ input,
 select,
 textarea {
 	color: #404040;
-	font-family: sans-serif;
+	font-family: Georgia, serif;
 	font-size: 16px;
 	font-size: 1rem;
 	line-height: 1.5;
