--- a/style.css
+++ b/style.css
@@ -30,7 +30,6 @@ select,
 textarea {
 	color: #404040;
 	font-family: Georgia, serif;
- 	font-size: 16px;
- 	font-size: 1rem;
+ 	font-size: 112.5%;
  	line-height: 1.5;
 }
