--- a/style.css
+++ b/style.css
@@ -38,6 +38,7 @@ div#page {
 	max-width: 800px;
 	margin: 0 auto;
 	background-color: rgb(251, 251, 251);
+	box-shadow: 0 0 5px rgba(0, 0, 0, 0.4);
 }
 body {
 	background-color: transparent;
