--- a/style.css
+++ b/style.css
@@ -38,6 +38,7 @@ div#page {
 	max-width: 800px;
 	max-width: 94ex;
 	margin: 22px auto 0 auto;
+	margin-left: 70px;
 	background-color: rgb(251, 251, 251);
 	box-shadow: 0 0 5px rgba(0, 0, 0, 0.4);
 	padding-top: 32px;
