--- a/style.css
+++ b/style.css
@@ -38,11 +38,12 @@ div#page {
 	max-width: 800px;
 	max-width: 94ex;
 	margin: 22px auto 0 auto;
-	margin-left: 70px;
 	background-color: rgb(251, 251, 251);
 	box-shadow: 0 0 5px rgba(0, 0, 0, 0.4);
 	padding-top: 32px;
     padding-bottom: 32px;
+    padding-left: 70px;
+    padding-right: 70px;
 }
 body {
 	background-color: rgb(230,230,230);
