--- a/style.css
+++ b/style.css
@@ -49,3 +49,10 @@ body {
 	background-color: rgb(230,230,230);
 }
 }
+a {
+            color: rgb(65, 110, 210);
+            text-decoration: none;
+        }
+
+
+
