--- a/style.css
+++ b/style.css
@@ -33,6 +33,49 @@ textarea {
  	font-size: 112.5%;
  	line-height: 1.65;
 }
+
+/*padding */
+
+@media screen and (min-width: 0px) {
+	div#page {
+		padding-left: 16px;
+		padding-right: 16px;
+	}
+
+}
+@media screen and (min-width: 350px) {
+	div#page {
+		padding-left: 20px;
+		padding-right: 20px;
+	}
+}
+@media screen and (min-width: 400px) {
+	div#page {
+		padding-left: 22px;
+		padding-right: 22px;
+	}
+}
+@media screen and (min-width: 600px) {
+	div#page {
+		padding-left: 40px;
+		padding-right: 40px;
+	}
+}
+@media screen and (min-width: 700px) {
+	div#page {
+		padding-left: 42px;
+		padding-right: 42px;
+	}
+}
+@media screen and (min-width: 730px) {
+	div#page {
+		padding-left: 60px;
+		padding-right: 60px;
+	}
+}
+
+
+
 @media only screen and (min-width: 780px) {
 div#page {
 	max-width: 800px;
