--- a/style.css
+++ b/style.css
@@ -75,7 +75,6 @@ textarea {
 }
 
 
-
 @media only screen and (min-width: 780px) {
 div#page {
 	max-width: 800px;
@@ -92,6 +91,11 @@ body {
 	background-color: rgb(230,230,230);
 }
 }
+
+.site-header {
+	border-bottom: 1px solid rgb(230,230,230);
+}
+
 a {
             color: rgb(65, 110, 210);
             text-decoration: none;
