--- a/style.css
+++ b/style.css
@@ -96,6 +96,19 @@ body {
 	border-bottom: 1px solid rgb(230,230,230);
 }
 
+/* make title really small for now */
+
+h1.site-title {
+	font-size: 12px;
+}
+p.site-description {
+	font-size: 10px;
+	float: right;
+}
+nav.main-navigation {
+	font-size: 10px;
+	}
+
 a {
             color: rgb(65, 110, 210);
             text-decoration: none;
