--- a/style.css
+++ b/style.css
@@ -119,5 +119,26 @@ a {
             text-decoration: none;
         }
 
+        h1, h2, h3, h4, h5, h6 {
+            font-weight: bold;
+        }
+
+        h1 {
+            font-size: 1.25em;
+            line-height: 1.4em;
+        }
+
+        h2 {
+            font-size: 1.125em;
+        }
+
+        h3 {
+            font-size: 1.05em;
+        }
+
+        h4, h5, h6 {
+            font-size: 1em;
+            margin: 1em 0;
+        }
 
 
