--- a/style.css
+++ b/style.css
@@ -153,6 +153,12 @@ a {
             font-size: 1em;
             margin: 1em 0;
         }
+        /* title */
+        
+        h1.entry-title {
+        	margin-bottom: 0px;
+        }
+        
 
 
 
