--- a/style.css
+++ b/style.css
@@ -159,7 +159,17 @@ a {
         	margin-bottom: 0px;
         }
         
+.entry-meta {
+	font-size: 90%;
+}
 
+.post-navigation {
+	font-size: 90%;
+	}
+	
+.comments-area {
+	font-size: 90%;
+	}
 
 
 .page-content,
