Removed yellow background for ins and mark tags

--- a/style.css
+++ b/style.css
@@ -159,6 +159,15 @@ a {
         	margin-bottom: 0px;
         }
         
+        
+/* HTML markup */
+
+mark,
+ins {
+	text-decoration: underline;
+}
+
+
 .entry-meta {
 	font-size: 80%;
 }
