--- a/style.css
+++ b/style.css
@@ -169,10 +169,10 @@ ins {
 
 
 blockquote, q {
-	margin-left: 1.5em;
-	margin-right: 1.5em;
+	padding-left: 1.5em;
 	quotes: "" "";
 	border-left: 3px solid rgba(0, 0, 0, 0.1);
+	color: rgba(0, 0, 0, 0.65);
 }
 
 
