Blockquote and q tags

--- a/style.css
+++ b/style.css
@@ -173,6 +173,7 @@ blockquote, q {
 	quotes: "" "";
 	border-left: 3px solid rgba(0, 0, 0, 0.1);
 	color: rgba(0, 0, 0, 0.65);
+	margin-left: 0;
 }
 
 
