--- a/style.css
+++ b/style.css
@@ -174,6 +174,7 @@ blockquote, q {
 	border-left: 3px solid rgba(0, 0, 0, 0.1);
 	color: rgba(0, 0, 0, 0.65);
 	margin-left: 0;
+	margin-right: 0.5em;
 }
 
 
