--- a/style.css
+++ b/style.css
@@ -167,6 +167,24 @@ ins {
 	text-decoration: underline;
 }
 
+ul,
+ol {
+	margin: 0 0 0.5em 1.5em;
+}
+
+ul {
+	list-style: disc;
+}
+ol {
+	list-style: decimal;
+}
+
+li > ul,
+li > ol {
+	margin-bottom: 0;
+	margin-left: 0.5em;
+}
+
 
 blockquote, q {
 	padding-left: 1.5em;
