--- a/style.css
+++ b/style.css
@@ -78,6 +78,10 @@ textarea {
 		padding-left: 60px;
 		padding-right: 60px;
 	}
+	/* up the size a bit on full width */
+	body {
+		font-size: 120%;
+	}
 }
 
 
