--- a/style.css
+++ b/style.css
@@ -111,13 +111,13 @@ div#page {
 /* make title really small for now */
 
 .site-title {
-	font-size: 14px;
+	font-size: 0.8em;
 	clear: none;
 	display: inline;
-	font-weight: normal;
+	font-weight: bold;
 }
 p.site-description {
-	font-size: 0.5em;
+	font-size: 0.7em;
 	margin-top: 0px;
 	margin-bottom: 0px;
 	font-style: italic;
