--- a/style.css
+++ b/style.css
@@ -114,7 +114,7 @@ div#page {
 	font-size: 0.8em;
 	clear: none;
 	display: inline;
-	font-weight: bold;
+	font-weight: normal;
 }
 p.site-description {
 	font-size: 0.7em;
