--- a/style.css
+++ b/style.css
@@ -115,12 +115,14 @@ div#page {
 	clear: none;
 	display: inline;
 	font-weight: normal;
+	float: right;
 }
 p.site-description {
 	font-size: 0.7em;
 	margin-top: 0px;
 	margin-bottom: 0px;
 	font-style: italic;
+	float: right;
 }
 nav.main-navigation {
 	font-size: 0.7em;
