--- a/style.css
+++ b/style.css
@@ -130,6 +130,7 @@ div.site-branding img {
 nav.main-navigation {
 	font-size: 0.7em;
 	text-align: center;
+	margin-top: 0.5em;
 	}
 	
 nav.main-navigation ul li {
