--- a/style.css
+++ b/style.css
@@ -54,42 +54,42 @@ main#main article header {
 		background-color: rgb(230,230,230);
 	}
 	main#main article, main#main header, main#main nav.post-navigation, main#main div#comments, div#secondary {
-		margin-left: 16px;
-		margin-right: 16px
+		padding-left: 16px;
+		padding-right: 16px
 	}
 
 }
 @media screen and (min-width: 350px) {
 main#main article, main#main header, main#main nav.post-navigation, main#main div#comments, aside#secondary {
-		margin-left: 20px;
-		margin-right: 20px
+		padding-left: 20px;
+		padding-right: 20px
 	}
 
 }
 @media screen and (min-width: 400px) {
 	main#main article, main#main header, main#main nav.post-navigation, main#main div#comments, aside#secondary {
-		margin-left: 22px;
-		margin-right: 22px
+		padding-left: 22px;
+		padding-right: 22px
 	}
 
 }
 @media screen and (min-width: 600px) {
 	main#main article, main#main header, main#main nav.post-navigation, main#main div#comments, aside#secondary {
-		margin-left: 40px;
-		margin-right: 40px
+		padding-left: 40px;
+		padding-right: 40px
 	}
 
 }
 @media screen and (min-width: 700px) {
 	main#main article, main#main header, main#main nav.post-navigation, main#main div#comments, aside#secondary {
-		margin-left: 40px;
-		margin-right: 40px
+		padding-left: 40px;
+		padding-right: 40px
 	}
 }
 @media screen and (min-width: 730px) {
 	main#main article, main#main header, main#main nav.post-navigation, main#main div#comments, aside#secondary {
-		margin-left: 40px;
-		margin-right: 40px
+		padding-left: 40px;
+		padding-right: 40px
 	}
 	/* up the size a bit on full width */
 	body {
@@ -106,11 +106,11 @@ div#page {
 	box-shadow: 0 0 5px rgba(0, 0, 0, 0.4);
 	padding-top: 32px;
     padding-bottom: 32px;
-    padding-left: 70px;
-    padding-right: 70px;
 }
 main#main article, main#main header, main#main nav.post-navigation, main#main div#comments, aside#secondary {
 	background-color: rgb(251, 251, 251);
+	padding-left: 70px;
+		padding-right: 70px
 }
 }
 
