--- a/style.css
+++ b/style.css
@@ -42,54 +42,45 @@ textarea {
 
 /*padding */
 
-main#main article header {
-	/* ensure that header inside the article doesn't have a left or right margin */
-	margin-left: 0px;
-	margin-right: 0px;
-}
-
 @media screen and (min-width: 0px) {
-
+	div#page {
+		padding-left: 16px;
+		padding-right: 16px;
+		background-color: rgb(251, 251, 251);
+	}
 	body {
 		background-color: rgb(230,230,230);
-	}
-	main#main article, main#main header, main#main nav.post-navigation, main#main div#comments, div#secondary {
-		padding-left: 16px;
-		padding-right: 16px
 	}
 
 }
 @media screen and (min-width: 350px) {
-main#main article, main#main header, main#main nav.post-navigation, main#main div#comments, aside#secondary {
+	div#page {
 		padding-left: 20px;
-		padding-right: 20px
+		padding-right: 20px;
 	}
-
 }
 @media screen and (min-width: 400px) {
-	main#main article, main#main header, main#main nav.post-navigation, main#main div#comments, aside#secondary {
+	div#page {
 		padding-left: 22px;
-		padding-right: 22px
+		padding-right: 22px;
 	}
-
 }
 @media screen and (min-width: 600px) {
-	main#main article, main#main header, main#main nav.post-navigation, main#main div#comments, aside#secondary {
+	div#page {
 		padding-left: 40px;
-		padding-right: 40px
+		padding-right: 40px;
 	}
-
 }
 @media screen and (min-width: 700px) {
-	main#main article, main#main header, main#main nav.post-navigation, main#main div#comments, aside#secondary {
-		padding-left: 40px;
-		padding-right: 40px
+	div#page {
+		padding-left: 42px;
+		padding-right: 42px;
 	}
 }
 @media screen and (min-width: 730px) {
-	main#main article, main#main header, main#main nav.post-navigation, main#main div#comments, aside#secondary {
-		padding-left: 40px;
-		padding-right: 40px
+	div#page {
+		padding-left: 60px;
+		padding-right: 60px;
 	}
 	/* up the size a bit on full width */
 	body {
@@ -99,19 +90,18 @@ main#main article, main#main header, main#main nav.post-navigation, main#main di
 
 
 @media only screen and (min-width: 780px) {
-article, #secondary, #colophon {
+div#page {
 	max-width: 800px;
 	max-width: 94ex;
 	margin: 22px auto 0 auto;
+	background-color: rgb(251, 251, 251);
 	box-shadow: 0 0 5px rgba(0, 0, 0, 0.4);
 	padding-top: 32px;
     padding-bottom: 32px;
+    padding-left: 70px;
+    padding-right: 70px;
 }
-main#main article, main#main header, main#main nav.post-navigation, main#main div#comments, aside#secondary {
-	background-color: rgb(251, 251, 251);
-	padding-left: 70px;
-		padding-right: 70px
-}
+
 }
 
 .site-header {
