adding one column tag

--- a/style.css
+++ b/style.css
@@ -1,15 +1,14 @@
 /*
 Theme Name: Direach
-Theme URI: http://underscores.me/
+Theme URI: http://thomas.bibby.ie/
 Author: Thomas Bibby
 Author URI: http://thomas.bibby.ie
 Description: A minimalist theme focused on readability, inspired by the Reader mode in web browsers
 Version: 1.0.3
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
-GitHub Theme URI: https://github.com/tbibby/direach-theme
 Text Domain: direach
-Tags:
+Tags: one-column
 
 This theme, like WordPress, is licensed under the GPL.
 Use it to make something cool, have fun, and share what you've learned with others.
