spacing on tags

--- a/style.css
+++ b/style.css
@@ -265,7 +265,7 @@ article.sticky .entry-title {
 
 /* spacing for tags */
 span.tags-links {
-	margin-right: 2em;
+	margin-left: 2em;
 }
 
 /* Code + Pre */
