--- a/style.css
+++ b/style.css
@@ -129,6 +129,13 @@ nav.main-navigation {
 	margin-top: 0.5em;
 	}
 	
+.main-navigation ul {
+	display: block;
+	list-style: none;
+	margin: 0;
+	padding-left: 0;
+}
+	
 nav.main-navigation ul li {
 	margin-right: 1em;
 }
