--- a/style.css
+++ b/style.css
@@ -134,6 +134,7 @@ nav.main-navigation {
 	list-style: none;
 	margin: 0;
 	padding-left: 0;
+	background-color: rgb(251, 251, 251);
 }
 	
 nav.main-navigation ul li {
