--- a/style.css
+++ b/style.css
@@ -290,6 +290,11 @@ figure.alignnone
 	margin-right: 0;
 }
 
+.wp-caption {
+	margin-bottom: 0.5em;
+	max-width: 100%;
+}
+
 /* Code + Pre */
 
 pre {
