--- a/style.css
+++ b/style.css
@@ -291,13 +291,11 @@ figure.alignnone
 }
 
 .wp-caption {
-	margin: 0.8075em 0;
+	margin-bottom: 0.5em;
 	max-width: 100%;
 }
 
-.wp-caption .wp-caption-text {
-	margin: 0;
-}
+
 
 /* Code + Pre */
 
