--- a/style.css
+++ b/style.css
@@ -347,6 +347,16 @@ div.widget-area {
 	font-size: 90%;
 }
 
+div#comments {
+	margin-top: 1em;
+}
+
+/* separation marker if we have more than one post */
+
+body.hfeed article {
+	border-bottom: 1px solid rgb(216, 216, 216);
+}
+
 .page-content,
 .entry-content,
 .entry-summary {
