--- a/style.css
+++ b/style.css
@@ -355,6 +355,7 @@ div#comments {
 
 body.hfeed article {
 	border-bottom: 1px solid rgb(216, 216, 216);
+	padding-bottom: 1em;
 }
 
 .page-content,
