some more separators

--- a/style.css
+++ b/style.css
@@ -358,6 +358,14 @@ body.hfeed article {
 	padding-bottom: 1em;
 }
 
+/* more separation markers */
+
+div.site-info {
+	border-bottom: 1px solid rgb(216, 216, 216);
+	padding-bottom: 1em;
+	margin-bottom: 1em;
+}
+
 .page-content,
 .entry-content,
 .entry-summary {
