--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /*
 Theme Name: Direach
-Theme URI: https://github.com/tbibby/direach-theme
+Theme URI: https://github.com/tbibby/direach
 Author: Thomas Bibby
 Author URI: http://thomas.bibby.ie
 Description: A minimalist theme focused on readability, inspired by the Reader mode in web browsers
