--- a/style.css
+++ b/style.css
@@ -50,6 +50,14 @@ textarea {
 	body {
 		background-color: rgb(230,230,230);
 	}
+	/* widgets */
+.widget-area .front-widgets {
+		float: none;
+		width: 100%;
+		padding-left: 0em;
+		padding-right: 0em;
+}
+
 
 }
 @media screen and (min-width: 350px) {
@@ -63,6 +71,12 @@ textarea {
 		padding-left: 22px;
 		padding-right: 22px;
 	}
+	.widget-area .front-widgets {
+		float: left;
+		width: 50%;
+		padding-left: 1.5em;
+		padding-right: 1.5em;
+}
 }
 @media screen and (min-width: 600px) {
 	div#page {
@@ -381,13 +395,6 @@ textarea {
 	margin: 0;
 }
 
-/* widgets */
-.widget-area .front-widgets {
-		float: left;
-		width: 50%;
-		padding-left: 1.5em;
-		padding-right: 1.5em;
-}
 
 .widget-area span.post-date {
 	margin-left: 1em;
