--- a/style.css
+++ b/style.css
@@ -80,8 +80,8 @@ textarea {
 	.widget-area .front-widgets {
 		float: left;
 		width: 50%;
-		padding-left: 1.5em;
-		padding-right: 1.5em;
+		padding-left: 0.5em;
+		padding-right: 0.5em;
 	}
 }
 @media screen and (min-width: 700px) {
@@ -397,5 +397,6 @@ textarea {
 
 
 .widget-area span.post-date {
-	margin-left: 1em;
+	margin-left: 0em;
+	font-style: italic;
 }
